tests/fixtures/errors/type_mismatch_add.lazy
// error: Type mismatch
//   --> tests/fixtures/errors/type_mismatch_add.lazy:11:14
//    |
// 11 | result = 5 + "hello"
//    |              ^----
// 
// Expected `integer` for addition, but found `string`.
// 
// help: Use `toString` to convert to string, or `++` for string concatenation.

result = 5 + "hello"
result
